Clarifying the interpretation of Ellenberg indicator values and community weighted affinity means; update PCA description for consistency and precision in environmental niche characterization.

--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -83,7 +83,7 @@ Microclimate data was recorded continuously every 15 minutes, between July 2019 
 
 In 2022, standing biomass was harvested at peak growing season in all unclipped and -grazed control plots. The biomass was harvested 2-3 cm above the ground, dried at 65 °C for 72 h, and weighed. Plant species composition and vegetation height were recorded at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck. The average vegetation height was measured at four points in each plot.
 
-We used environmental affinities to characterize the environmental preference / niche of the plant communities. We used Ellenberg indicator values for light, temperature, nutrient, reaction, and moisture as environmental affinities, extracted from a database for European vascular plants [@tichy2023ellenberg]. In addition we used a grazing disturbance indicator value (i.e. an indicator for the severity of grazing) developed for European plants [@midolo2023disturbance]. For 87 % of the species (47 out of 54 species) these affinities were available.
+We used environmental affinities to characterize the environmental preference / niche of the plant communities. We used Ellenberg indicator values for light, temperature, nutrient, reaction, and moisture as environmental affinities, extracted from a database for European vascular plants [@tichy2023ellenberg]. Higher indicator values are associated with more light, temperature, nutrient, alkaline, and moist plant species. Note that the indicator value for nutrients was initially defined for nitrogen content, but is now it is more often used for nutrients (i.e. nitrogen and phosphorus) [@ellenberg1992zeigerwerte]. In addition we used a grazing disturbance indicator value (i.e. higher values indicate higher severity of grazing) developed for European plants [@midolo2023disturbance]. For 87 % of the species (47 out of 54 species) these affinities were available.
 
 ### Statistical analysis
 
@@ -107,6 +107,6 @@ model <- psem(
 
 ```
 
-To understand the underlying mechanisms of how the three global change drivers affect the plant community composition (H2), we used environmental affinities describing changes in the environmental niches of these communities in response to the treatments. We used five Ellenberg indicator values (light, temperature, nutrients, reaction, and moisture) and one grazing disturbance indicator value. We then calculated the community weighted affinity means using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping].
+To understand the underlying mechanisms of how the three global change drivers affect the plant community composition (H2), we used environmental affinities describing changes in the environmental niches of these communities in response to the treatments. We used five Ellenberg indicator values (light, temperature, nutrients, reaction, and moisture) and one grazing disturbance indicator value. We then calculated the community weighted affinity means using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Note that the community weighted affinity means represent the environmental niche for the plant communities.
 
-To summarize the environmental affinities across the alpine and sub-alpine plant communities, we performed a PCA with scaled and centered variables across both sites using the vegan package [@oksanen2022vegan]. The first two PCA axis explained 83.9 % of the variation together, and we therefore did not consider more PCA axis. We then ran the same SEM as described above where the PCA axis 1 and 2 replace the diversity indices. Because the joint PCA across sites reflected the sub-alpine site less well compared to the alpine site, we repeated the PCA separately for each site and ran the SEMs again with PCA axis from the PCA analysis separated by site (see Supplementary Figures S7, and S8).
+To summarize the environmental affinities across the alpine and sub-alpine plant communities, we performed a principle component analysis (PCA) with scaled and centered variables across both sites using the vegan package [@oksanen2022vegan]. The first two PC axes explained 83.9 % of the variation together, and we therefore did not consider more axes. We then ran the same SEM as described above where the affinity PC axis 1 and 2 replace the diversity indices. Because the joint PCA across sites reflected the sub-alpine site less well compared to the alpine site, we repeated the PCA separately for each site and ran the SEMs again with affinity PC axis from the PCA analysis separated by site (see Supplementary Figures S7, and S8).
