--- a/manuscript/main_manuscript.qmd
+++ b/manuscript/main_manuscript.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Multiple global change drivers impacts alpine grasslands through standing biomass / the same mechanisms"
+title: "Do multiple global change drivers impacts montane grasslands through the same mechanisms?"
 author: 
   - name: Aud H. Halbritter
     orcid: 0000-0003-2597-6328
